Finished basic website concept.

--- a/index.html
+++ b/index.html
@@ -2,19 +2,32 @@
 
   <head>
     <title>TAKEWAKE Software</title>
+    <link rel="shortcut icon" type="image/x-ico" href="res/img/icon.ico" />
   </head>
 
   <body>
     <font face="arial,helvetica">
       <center>
         <br />
-        <h1>TAKEWAKE Software</h1>
-        <h3>This will become the official TAKEWAKE Software website!</h3>
+        <img src="res/img/banner.png" />
+        <br />
+        <br />
+        <iframe src="./menuBar.html" style="width: 100%; height: 60px; border: none;" scrolling="no">
+        </iframe>
         <br />
         <hr />
+        <h2>Welcome to the official TAKEWAKE Software website!</h2>
+        <h3>Please select a category from the top to get started.</h3>
+        <hr />
+        <h2>News</h2>
+        <hr />
+        <h3>New game announcement: Cridle</h3>
+        <h5>12.01.2021 - 14:57</h5>
         <br />
-        <h4>This website is still in development!</h4>
-        <h4>Please visit <a href="https://techcrafter.github.io" style="color:black">this website</a> instead.</h4>
+        <p>A new game called Cridle will release this year (2021)!</p>
+        <p>The exact release date is still unknown because we try to keep our games with the best quality possible.</p>
+        <h4>Please visit the 'Games' page for a small introduction into the game!</h4>
+        <th><img src="res/img/games/cridle.png" style="width:420px" /></th>
       </center>
     </font>
   </body>
