Added about page in the title

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <html>
 
   <head>
-    <title>TAKEWAKE Software</title>
+    <title>TAKEWAKE Software - About</title>
     <link rel="shortcut icon" type="image/x-ico" href="res/img/icon.ico" />
   </head>
 
