Some small fixed

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <font face="arial,helvetica">
       <center>
         <br />
-        <img src="res/img/banner.png" />
+        <a href="index.html"><img src="res/img/banner.png" /></a>
         <br />
         <br />
         <iframe src="./menuBar.html" style="width: 100%; height: 60px; border: none;" scrolling="no">
