--- a/games.html
+++ b/games.html
@@ -23,7 +23,7 @@
         <table style="width:80%">
           <tr>
             <th><img src="res/img/screenshots/cridle.png" style="width:80%" /></th>
-            <th><p>You wake up in a strange looking basement. Collect items, search for the different room exits and try to find some more informations about what's going on here.</p><p>Don't forget to get out there before it is too late!</p><br /><br /><img src="res/img/age16.png" style="width:64px" /><br /><h5>Tags: Story, Puzzle</h5></th>
+            <th><p>You wake up in a strange looking basement. Collect items, search for the different room exits and try to find some more informations about what's going on here.</p><p>Get out there before it is too late!</p><br /><br /><img src="res/img/age16.png" style="width:64px" /><br /><h5>Tags: Story, Puzzle</h5></th>
           </tr>
           <tr>
             <th><img src="res/img/games/cridle.png" style="width:320px" /></th>
