Fixed some small typos

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h2>News</h2>
         <hr />
         <h3>New game announcement: Cridle</h3>
-        <h5>12.01.2021 - 14:57</h5>
+        <h5>01/12/2021 - 14:57</h5>
         <br />
-        <p>A new game called Cridle will release this year (2021)!</p>
+        <p>A new game called Cridle will be released this year (2021)!</p>
         <p>The exact release date is still unknown because we try to keep our games with the best quality possible.</p>
         <h4>Please visit the 'Games' page for a small introduction into the game!</h4>
         <th><img src="res/img/games/cridle.png" style="width:420px" /></th>
