Added discord links

--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
         <p>We'll try to respond as quick as possible!</p>
         <br />
         <h3>Links</h3>
+        <p><a href="https://discord.gg/WRzeQgdaNF" style="color:black">Join us on Discord</a></p>
         <p><a href="https://github.com/takewake-software" style="color:black">GitHub page</a></p>
       </center>
     </font>
