--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         <hr />
         <h2>News</h2>
         <hr />
+        <h3>Join us on Discord today!</h3>
+        <h5>01/15/2021 - 17:35</h5>
+        <br />
+        <p>You can now join us on Discord!</p>
+        <p>Just click the link to get started:</p>
+        <h4><a href="https://discord.gg/WRzeQgdaNF" style="color:black">Join us on Discord</a></h4>
+        <hr />
         <h3>New game announcement: Cridle</h3>
         <h5>01/12/2021 - 14:57</h5>
         <br />
