Added Rollin' Cube to the news and the games list.

--- a/games.html
+++ b/games.html
@@ -22,6 +22,17 @@
         <br />
         <table style="width:80%">
           <tr>
+            <th><img src="res/img/screenshots/rollin-cube.png" style="width:80%" /></th>
+            <th><p>Control this funny cube with wheels and drive him back home. Collect coins, unlock skins and complete lots of fun levels.</p><p>Make sure that you don't fall into the void!</p><br /><br /><img src="res/img/age0.png" style="width:64px" /><br /><h5>Tags: Casual, Skill, Driving</h5></th>
+          </tr>
+          <tr>
+            <th><img src="res/img/games/rollin-cube.png" style="width:320px" /></th>
+            <th><img src="res/img/notReleased.png" style="width:200px" /></th>
+          </tr>
+        </table>
+        <hr />
+        <table style="width:80%">
+          <tr>
             <th><img src="res/img/screenshots/cridle.png" style="width:80%" /></th>
             <th><p>You wake up in a strange looking basement. Collect items, search for the different room exits and try to find some more informations about what's going on here.</p><p>Get out there before it is too late!</p><br /><br /><img src="res/img/age16.png" style="width:64px" /><br /><h5>Tags: Story, Horror, Puzzle</h5></th>
           </tr>
