--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         <hr />
         <h2>News</h2>
         <hr />
+        <h3>New game announcement: Rollin' Cube</h3>
+        <h5>03/18/2021 - 12:42</h5>
+        <br />
+        <p>A new game called Rollin' Cube is currently in development!</p>
+        <h4>Please visit the 'Games' page for a bit more!</h4>
+        <th><img src="res/img/games/rollin-cube.png" style="width:420px" /></th>
+        <hr />
         <h3>Join us on Discord today!</h3>
         <h5>01/15/2021 - 17:35</h5>
         <br />
