Added Rollin-Cube version 1.0 release

--- a/games.html
+++ b/games.html
@@ -27,7 +27,7 @@
           </tr>
           <tr>
             <th><img src="res/img/games/rollin-cube.png" style="width:320px" /></th>
-            <th><img src="res/img/notReleased.png" style="width:200px" /></th>
+            <th><a href="https://github.com/TAKEWAKE-Software/Rollin-Cube/releases/latest"><img src="res/img/downloadGitHub.png" style="width:200px" /></a></th>
           </tr>
         </table>
         <hr />
@@ -41,22 +41,6 @@
             <th><img src="res/img/notReleased.png" style="width:200px" /></th>
           </tr>
         </table>
-        <hr />
-        <table style="width:80%">
-          <tr>
-            <th style="width: 60%"><img src="res/img/screenshots/sbrw-wugg.png" style="width:80%" /></th>
-            <th><h4 style="color: orange">Recommendation*</h4><h3>Soapbox Race World - WorldUnited.GG</h3><p>Join this big community with over 125000 registered players and compete against those in action packed multiplayer races. Earn cash to buy new cars and to tune and style your old ones. The game has a huge open world map where you can drive around and meet other players that are currently online. The game is in active development and the graphics are inredible!</p><p>The best: It's absolutely free! No subscriptions, no pay to win.</p><p>What are you waiting for? Join WorldUnited.GG today!</p><br /><br /><img src="res/img/age12.png" style="width:64px" /><br /><h5>Tags: Racing, Online, Multiplayer</h5></th>
-          </tr>
-          <tr>
-            <th><img src="https://github.com/SoapboxRaceWorld/GameLauncher_NFSW/blob/bf2a711ff8897c9c4280ea6dc36a870866f2096a/GameLauncher/Resources/logo_splash.png" style="width:320px" /></th>
-            <th><a href="https://worldunited.gg/"><img src="res/img/showMoreExternal.png" style="width:200px" /></a> <a href="https://git.io/Download_NFSW"><img src="res/img/downloadExternal.png" style="width:200px" /></a></th>
-          </tr>
-        </table>
-        <br />
-        <hr />
-        <p>All of the here listed age ratings are not official. These are choosen by TAKEWAKE Software and are meant as an orientation and not as an official restriction.</p>
-        <br />
-        <p>* This game or software title is not developed or published by TAKEWAKE Software! TAKEWAKE Software is not affiliated or sponsored by the publisher or provider of the recommended game or software title. Those games and software titles are recommended here because they completely match our motto of free and awesome software. Recommended titles are listed here, to share those amazing and free games with other people. This is your game and you don't want it to be listed here? Please <a href="mailto:takewake-software@outlook.com" style="color: black">send us an e-mail</a>.</p>
       </center>
     </font>
   </body>
