Added 'Play Online' button

--- a/games.html
+++ b/games.html
@@ -27,7 +27,7 @@
           </tr>
           <tr>
             <th><img src="res/img/games/rollin-cube.png" style="width:320px" /></th>
-            <th><a href="https://github.com/TAKEWAKE-Software/Rollin-Cube/releases/latest"><img src="res/img/downloadGitHub.png" style="width:200px" /></a></th>
+            <th><a href="https://takewake-software.github.io/Rollin-Cube"><img src="res/img/playOnline.png" style="width:200px" /></a> <a href="https://github.com/TAKEWAKE-Software/Rollin-Cube/releases/latest"><img src="res/img/downloadGitHub.png" style="width:200px" /></a></th>
           </tr>
         </table>
         <hr />
