Added CRIDLE version 1.1

--- a/games.html
+++ b/games.html
@@ -38,7 +38,7 @@
           </tr>
           <tr>
             <th><img src="res/img/games/cridle.png" style="width:320px" /></th>
-            <th><img src="res/img/notReleased.png" style="width:200px" /></th>
+            <th><a href="https://techcrafter-jw.itch.io/cridle"><img src="res/img/playOnline.png" style="width:200px" /></a> <a href="https://github.com/TAKEWAKE-Software/CRIDLE/releases/latest"><img src="res/img/downloadGitHub.png" style="width:200px" /></a></th>
           </tr>
         </table>
       </center>
