--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         <hr />
         <h2>News</h2>
         <hr />
+        <h3>CRIDLE version 1.1 released!</h3>
+        <h5>07/05/2021 - 16:00</h5>
+        <br />
+        <p>Version 1.1 of CRIDLE has been released!</p>
+        <h4>For more information and a download link, please visit the 'Games' page!</h4>
+        <th><img src="res/img/games/cridle.png" style="width:420px" /></th>
+        <hr />
         <h3>Rollin' Cube version 1.0 released!</h3>
         <h5>07/05/2021 - 16:00</h5>
         <br />
